# LangCache-Private-Preview-Implementation

./: .env.example  .gitignore  README.md  app.py  config-template.yaml  demo.py  docker-compose.yaml  ngram_utils.py  pyproject.toml  requirements.txt  setup.sh  structure.txt
custom-embeddings/: Dockerfile  azure-openai-embeddings.py  main.py  requirements.txt
langcache-operations/: Dockerfile  langcache_service.py
langcache-operations/embeddings/: Dockerfile  main.py  requirements.txt
langcache-operations/static/js/: latency.js  main.js  settings.js
langcache-operations/templates/: index.html
llm-app/: Dockerfile  app.py  log_manager.py  pyproject.toml  requirements.txt
llm-app/static/css/: styles.css
llm-app/static/js/: main.js
llm-app/templates/: cache_log.html  index.html
static/css/: operations-log.css  styles.css
static/js/: latency.js  main.js  operations-log.js  query-analysis.js  settings.js
templates/: index.html
