[project]
name = "langcache-private-preview-implementation"
version = "0.0.1"
description = "Redis LangCache Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-on-whales>=0.78.0",
    "flask==2.0.1",
    "Werkzeug<3.0.0",
    "python-dotenv==1.1.0",
    "google-genai==1.9.0",
    "requests==2.31.0",
    "gunicorn==21.2.0",
    "Jinja2<3.1.0",
    "itsdangerous<2.1.0",
    "click<8.1.0",
    "markupsafe<2.1.0",
    "openai>=1.97.0",
    "tenacity>=9.1.2",
    "typer>=0.16.0"
]

[tool.uv]
package = true

[project.scripts]
demo = "demo:app"
